# madhus.project.handgrip

./: .gitattributes  .gitignore  .graphifyignore  AGENTS.md  Binnacle.md  Doxyfile  README.md  TESTING.md  binnacle.md  package-lock.json  pending_docs  platformio.ini  pyproject.toml  pytest_all.py
Handgrip_Analysis/: COMMANDS.md  FIGURE_GENERATION_PATCH_NOTES.md  PHASE1_REFACTOR_NOTES.md  PHASE2_3_REFACTOR_NOTES.md  README.md  README_filter_design_report.md  STAGE6_CONTEXT_FIX_NOTES.md  pyproject.toml  requirements.txt
Handgrip_Analysis/conf/: config.yaml
Handgrip_Analysis/conf/analysis/: stage1.yaml  stage2.yaml  stage3.yaml  stage4.yaml  stage5.yaml  stage6.yaml
Handgrip_Analysis/conf/dsp/: defaults.yaml
Handgrip_Analysis/conf/filters/: candidates.yaml
Handgrip_Analysis/conf/io/: defaults.yaml
Handgrip_Analysis/configs/: filter_candidates.yaml
Handgrip_Analysis/data/: calibration_manifest.csv  capture_manifest_template.csv  lsl_bridge_filter_placeholder.yaml  sample_rest_capture.csv
Handgrip_Analysis/data/calibration_signals/: 20260402_stage4_fast_max_trial01.csv  20260402_stage4_fast_max_trial02.csv  20260402_stage4_ramp_hold_trial01.csv  20260402_stage4_sustained_hold_trial01.csv  20260512_stage4_fast_max_trial03.csv  20260512_stage4_ramp_hold_trial02.csv  20260512_stage4_ramp_hold_trial03.csv  20260512_stage4_sustained_hold_trial02.csv  20260512_stage4_sustained_hold_trial03.csv
Handgrip_Analysis/data/manifests/: all_runnable_manifest.csv  analysis_stages_1_4_manifest.csv  stage1_manifest.csv  stage2_manifest.csv  stage3_manifest.csv  stage4_manifest.csv  stage5_interference_manifest_TEMPLATE.csv  stage6_filter_review_manifest.csv
Handgrip_Analysis/docs/: architecture.md  configuration.md  development.md  filter-design.md  index.md  quickstart.md  reports-and-outputs.md  stages.md  workflow.md
Handgrip_Analysis/scripts/: run_all.py  run_manifest_analysis.py  stage1_startup_warmup.py  stage2_static_noise.py  stage3_loaded_drift.py  stage4_grip_dynamics.py  stage5_interference_compare.py  stage6_filter_design.py  stage6_filter_family_review.py
Handgrip_Analysis/src/handgrip_analysis/: __init__.py  _logging.py  _paths.py  aggregation.py  cli.py  domain.py  dsp.py  io.py  manifest.py  pipeline.py  plotting.py  report.py  stage6_report.py  uncertainty.py
Handgrip_Analysis/src/handgrip_review/: common.py
Handgrip_Analysis/tests/integration/: test_cli_overrides.py  test_phase23_cli.py  test_pipeline.py
Handgrip_Analysis/tests/unit/: test_config.py  test_dsp.py  test_io.py  test_manifest_phase1.py  test_paths.py
Handgrip_Calibration/: README.md  pyproject.toml
Handgrip_Calibration/conf/: config.yaml  default.yaml  protocol_creep_zero_return.yaml  protocol_dynamic_validation.yaml  protocol_fast_smoke_test.yaml  protocol_holdout_verification.yaml  protocol_low_force_refinement.yaml  protocol_reference_verification.yaml  protocol_smoke_test_capture.yaml  protocol_smoke_test_holdout.yaml  protocol_static_reversible_staircase_v3.yaml  protocol_static_staircase.yaml  template.yaml
Handgrip_Calibration/docs/: applying-calibration-results.md  architecture.md  calibration-manual.md  calibration-report-reference.md  configuration.md  development.md  fitting-and-model-selection.md  index.md  protocols.md  quickstart.md  recording.md  reports-and-outputs.md  workflow.md  workflow_new.md
Handgrip_Calibration/docs/.work/: calibration-report-reference-draft.md  calibration-report-reference-source-inventory.md  report-concept-inventory.md
Handgrip_Calibration/handgrip_calibration/: __init__.py  cli.py  config_schema.py  export.py  fitting.py  lsl_io.py  markers.py  protocol.py  protocol_analysis.py  recorder.py  report.py  segmentation.py  session.py  synthetic.py  validation.py  xdf_import.py
Handgrip_Calibration/scripts/: analyze_step_relaxation.py  calibration_preflight.py  run_demo_validation.sh
Handgrip_Calibration/src/handgrip_calibration/: __init__.py  __main__.py  _utils.py  cli.py  config_schema.py  export.py  fitting.py  logging_setup.py  lsl_io.py  markers.py  protocol.py  protocol_analysis.py  quality.py  recorder.py  relaxation.py  report.py  report_interpretation.py  segmentation.py  session.py  synthetic.py  validation.py  xdf_import.py
Handgrip_Calibration/tests/: conftest.py  test_fitting_affine.py  test_marker_schema.py  test_segmentation.py
Handgrip_Calibration/tests/integration/: test_fitting_affine.py  test_segmentation.py
Handgrip_Calibration/tests/unit/: test_calibration_preflight.py  test_config_paths.py  test_quality_rules.py  test_report_interpretation.py
LSL_Bridge/: README.md  README_Filter.md  filter.py  handgrip_lsl_bridge.py  pyproject.toml
LSL_Bridge/conf/: config.yaml
LSL_Bridge/conf/logging/: debug.yaml  default.yaml
LSL_Bridge/docs/: architecture.md  configuration.md  development.md  index.md  quickstart.md  stream-contracts.md  timestamping.md  workflow.md
LSL_Bridge/src/lsl_bridge/: __init__.py  __main__.py  app.py  logging_setup.py  types.py
LSL_Bridge/tests/integration/: test_csv_sinks.py
LSL_Bridge/tests/unit/: test_filter.py  test_parser.py  test_reference_age.py  test_timestamping.py
LSL_Viewer/: README.md  handgrip_realtime_viewer.py  pyproject.toml
LSL_Viewer/conf/: config.yaml
LSL_Viewer/docs/: architecture.md  configuration.md  development.md  index.md  live-csv-xdf-modes.md  quickstart.md  workflow.md  xy-correlation.md
LSL_Viewer/scripts/: analyze_xy_lag.py
LSL_Viewer/src/lsl_viewer/: __init__.py  __main__.py  cli.py  config.py  diagnostics.py  errors.py  logging_setup.py  types.py
LSL_Viewer/tests/e2e/: test_cli.py
LSL_Viewer/tests/integration/: test_charts.py  test_csv_replay.py
LSL_Viewer/tests/unit/: test_alignment.py  (+4 more)
RS485_GUI/: README.md  README_acquisition_board_gui.md  acquisition_board_gui.py  config.yaml  pyproject.toml
RS485_GUI/config/: config.yaml
RS485_GUI/docs/: active-send-and-modbus.md  architecture.md  configuration.md  development.md  index.md  ipc-schema.md  logging-and-outputs.md  quickstart.md  workflow.md
RS485_GUI/logs/: .gitignore
(+251 files in other folders)
