[project]
name = "handgrip-suite"
version = "0.1.0"
description = "Arduino serial to LSL irregular stream bridge with CSV logging"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "hydra-core>=1.3",
  "pyserial>=3.5",
  "pylsl>=1.17",
  "matplotlib>=3.10.8",
  "mne>=1.11.0",
  "mne-lsl>=1.13.1",
  "pandas>=3.0.2",
  "pyqt5>=5.15.11",
  "pyxdf>=1.17.4",
  "handgrip-analysis",
  "rs485-gui",
]

[tool.uv]
package = false

[tool.uv.sources]
"handgrip-analysis"  = {path = "Handgrip_Analysis", editable = true }
"rs485-gui"          = {path = "RS485_GUI", editable = true }