[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "handgrip-analysis"
version = "0.2.0"
description = "Handgrip sensor signal analysis pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "scipy>=1.13",
    "hydra-core>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
ha-stage1        = "handgrip_analysis._cli.stage1:main"
ha-stage2        = "handgrip_analysis._cli.stage2:main"
ha-stage3        = "handgrip_analysis._cli.stage3:main"
ha-stage4        = "handgrip_analysis._cli.stage4:main"
ha-stage5        = "handgrip_analysis._cli.stage5:main"
ha-stage6-design = "handgrip_analysis._cli.stage6_design:main"
ha-stage6-review = "handgrip_analysis._cli.stage6_review:main"
ha-run-all       = "handgrip_analysis._cli.run_all:main"
ha-run-manifest  = "handgrip_analysis._cli.manifest:main"

[tool.hatch.build.targets.wheel]
packages = ["src/handgrip_analysis"]

[tool.uv]
python = "3.11"
