[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "handgrip-calibration"
version = "0.1.0"
description = "Calibration session recorder, QA, fitting, and report tooling for dual-device handgrip calibration."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Nicolás Schiappacasse", email = "nicolaschiappacase@gmail.com"}]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "matplotlib>=3.6",
  "tabulate>=0.9",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
]

[project.optional-dependencies]
lsl = ["pylsl>=1.16"]
xdf = ["pyxdf>=1.16"]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "mypy>=1.0",
  "ruff>=0.4",
]

[project.scripts]
handgrip-cal = "handgrip_calibration.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/handgrip_calibration"]

[tool.hatch.build.targets.wheel.force-include]
"src/handgrip_calibration/py.typed" = "handgrip_calibration/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/handgrip_calibration"]
