[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lsl-bridge"
version = "2.0.0"
description = "LSL bridge for the Handgrip system: publishes HandgripTarget and HandgripReference streams"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["lsl", "handgrip", "serial", "zmq", "biosignal"]
dependencies = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "pylsl>=1.16",
    "pyserial>=3.5",
    "pyzmq>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
lsl-bridge = "lsl_bridge.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lsl_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=lsl_bridge --cov-report=term-missing"

[tool.coverage.run]
source = ["src/lsl_bridge"]
