[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lsl-viewer"
version = "0.2.0"
description = "Dual-native-stream LSL handgrip force viewer with live, CSV, and XDF replay modes"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.1",
    "PyQt5>=5.15",
    "mne-lsl>=1.2",
    "pyxdf>=1.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
lsl-viewer = "lsl_viewer.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/lsl_viewer"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
